# rust_trade

./: .gitignore  Cargo.toml
.devcontainer/: devcontainer.json  docker-compose.yml
bot/: Cargo.toml
bot/examples/: README.md  panic_recover.rs  tmp.rs  ws_client.rs  ws_server.rs
bot/src/: candle.rs  lib.rs  main.rs  types.rs  util.rs  ws.rs
db/: Cargo.toml  README.md  docker-compose.yml
db/migrations/: 20230410085205_init.sql
db/src/: lib.rs
examples/: Cargo.toml
examples/examples/: fbs.rs
examples/flatbuffers/: Cargo.toml
examples/flatbuffers/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
preprocessing/: Cargo.toml  README.md
preprocessing/src/: _main._rs  lib.rs
tasks/: .env  Cargo.toml  README.md  docker-compose.yml
tasks/migrations/: 20230410085205_init.sql
tasks/src/: db.rs  main.rs
tasks/src/schema/: mod.rs  task.rs
