[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20.0", features = ["rt", "macros", "io-util", "io-std", "sync", "rt-multi-thread", "time"]}
anyhow = "1.0.70"

# futures-channel = "0.3"
tokio-tungstenite = {version = "*", features = ["native-tls", "stream", "default", "connect"] }
# url = "*"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.95"

# async-trait = "0.1.68"

chrono = "0.4.24"
log = "0.4"
env_logger = "0.10.0"
futures-channel = "0.3"
url="2.2.2"