[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "postgres", "sqlx-macros",  "chrono" ] }
anyhow = "1.0.70"
futures = "0.3"



tokio = { version = "1.20.0", features = ["test-util", "rt-multi-thread", "macros"] }
chrono = "0.4.24"
# juniper = "0.16.0-dev"
juniper = "0.15.11"
log = "0.4.17"
env_logger = "0.10.0"
actix-web = "4.3.1"
actix-web-lab = "0.19.1"
actix-cors = "0.6.4"
serde = "1.0.160"
serde_json = "1.0.96"
juniper_actix = "0.4.0"
async-stream = "0.3"
rand = "0.8"


[dev-dependencies]
